# ort

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pixi.toml
.github/workflows/: ci.yml  package.yml
conda.recipe/: build.bat  build.sh  recipe.yaml
onnx_protos/: Cargo.toml  build.rs
onnx_protos/protobuf_gen/: gen.sh
onnx_protos/src/: attribute.rs  edge_info.rs  error.rs  function.rs  graph.rs  lib.rs  model.rs  node.rs  operation.rs  protos.rs  tensor.rs  utils.rs
ort/: Cargo.toml
ort-py/: Cargo.toml  pyproject.toml
ort-py/python/onnxrt/: __init__.py
ort-py/src/: lib.rs  py_value.rs
ort-py/tests/: test_basics.py
ort-sys/: Cargo.toml  build.rs
ort-sys/binding_gen/: make_bindings.sh
ort-sys/src/: bindings.rs  lib.rs
ort/src/: api.rs  error.rs  lib.rs  session.rs  tensor_dtype.rs  type_info.rs  value.rs
recipe/: recipe.yaml
