[package]
name = "ort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
ndarray = "0.15.6"
ort-sys = { path = "../ort-sys" }

[dev-dependencies]
onnx_protos = { path="../../onnx_proto/onnx_protos" }
tempfile = "3.10.0"
